Remove unnecessary endpoints (#84)
After agreeing on the API contract between this app, the CRM interface api and the CRM api. We agreed that a number of endpoints are needed anymore.

These are:

GET /api/operations/generate_mapping_info
PUT /api/operations/pause_crm_integration
PUT /api/operations/resume_crm_integration
POST /api/operations/backfill_apply_candidates
POST /api/operations/backfill_apply_candidates_from_ids
GET /api/mailing_list/members/exchange_magic_link_token/{magicLinkToken}
POST /api/teaching_events/attendees
POST /api/teaching_events/attendees
POST /api/teaching_events/attendees/exchange_access_token/{accessToken}
